Removing height 100 seems to fix overflow issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -404,7 +404,7 @@ md-sidenav.md-closed.md-locked-open-add-active.user_menu {
 
 .main_page{
   background-color: #e0ebf4;
-  @extend .height_100;
+  // @extend .height_100;
 }
 
 .top_bit{
